tests/invalid_syntax/test_missing_else.aphi
/*
Demonstrates: Missing else block
*/

bool cond;

procedure main {
    if (cond) {
        cond = true;
    }
}